src/index.global.css
/* Using global sytles is not recommended, prefer local styles via CSS Modules */

@import "./variables.global.css";

/*
 * box model like it should be
 *
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* add some vertical rhythm with the lobotomised owl */
* + * {
  margin-top: 1em;
}

p:first-child {
  margin-top: 3em;
}

p:last-child {
  margin-bottom: 1em;
}


/* but remove it from some type of elements */
body, br, li, dt, dd, th, td, option, span, a, nav, ul {
  margin-top: 0;
}

br {margin: 0; padding:0;}
/*
 * page styles
 */
html {
  min-height: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  font-size: calc(1em + 1vw / 4);

  line-height: var(--lineHeightNormal);
  text-wrap: balance;

  /* system font https://medium.com/designing-medium/system-shock-6b1dc6d6596f */
  font-family: "Karla", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: 300;

  @apply --normal-colours;
}

:--headings {
  @apply --content-squash;
  font-weight: 700;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  color: var(--colorSecondaryDark);
}

h5 {
  text-transform: uppercase;
  font-weight: 400;
  font-size: 90%;
  letter-spacing: 2px;
}

h4, p.big-text {
  font-weight: 400;
  font-family: "Karla", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}

p.big-text {
  color: var(--colorSecondaryDark);
  margin-top: 0;
}

.phenomic-HeadingAnchor {
  display: none;
}

:--blocks {
  @apply --content-squash;
}

ul, ol {
  -webkit-padding-start: 3rem;
}

ul {
  list-style-type: square;
}

blockquote {
  position: relative;
  padding-left: 2rem;
  padding-right: 2rem;
  max-width: 48rem;
  font-size: 120%;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote:first-child {
  padding-top: 0!important;
}

blockquote:last-child {
  padding-bottom: 0!important;
}

blockquote:last-child:after {
  bottom: -0.15em;
}

blockquote:before {
  /*display: none;*/
  content: open-quote;
  position: absolute;
  top: 0;
  left: 0rem;
  line-height: 1;
  font-size: 400%;
}

blockquote:after {
  /*display: none;*/
  content: close-quote;
  position: absolute;
  bottom: -0.75rem;
  right: 1rem;
  line-height: 1;
  font-size: 400%;
}

blockquote cite {
  font-size: 80%;
}

blockquote cite:before {
  content: "\2014 \2009";
}

/* minimal styling, prefer removing this and use local styles */
a {
  color: var(--colorLinkDark);
  text-decoration: none;
  transition: all 0.1s;
  font-weight: 600;

  @media (hover: hover) {
    &:hover {
      color: var(--colorHoverDark);
      opacity: 1;
    }
  }
}

a, button, input[type="submit"] {
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

/* making small behave more like a p */
small {
  font-size: 80%;
  line-height: 1.9;
  display: block;
  opacity: 0.6;
}

.squashed {
  @apply --content-squash;
}

.content-box {
  margin-top: 0;
  line-height: 0;
  width: 100%;
  /*max-width: 900px;*/

  & :--blocks {
    line-height: var(--lineHeightNormal);
  }
  & :--headings {
    line-height: var(--lineHeightNormal);
  }
  & > :--blocks:first-child,
  & :--headings {
    padding-top: 1.5em;
  }
  & > :--blocks:last-child {
    padding-bottom: 1.5em;
  }
}
.content-box.dark {
  @apply --inverted-colours;

  & :--headings {
    color: var(--colorNeutralLight);
  }
}

.squashed-columns {
  @apply --content-squash;
  padding: 0;
}

@media (min-width: 1025px) {
  .squashed-columns {
    display: flex;
  }

  .jobs-columns {
    @apply --content-squash;
    display:flex;
    flex-wrap: wrap;
  }

  .columns > * {
    flex-basis: 50%;
  }

  body {
    font-size: 1em;
  }

  h1 {
    font-size: 200%;
  }

  h2 {
    font-size: 160%;
  }

  h3 {
    font-size: 140%;
  }

  h4, p.big-text {
    font-size: 130%;
  }
}

.content-box:not(.inline-images) img {
  display: block;
  margin: auto;
}

.floating-images img {
  margin: 0 auto 1rem;
  display: block;
}

@media (min-width: 1025px) {
  .floating-images img {
    float: left;
    margin: 0 5rem 0 0;
  }
}

.video {
  padding: 2rem;
  display: block;
  text-align: center;
}

@media (min-width: 1025px) {
  .video {
    float: left;
    margin: 1rem 0.3rem 0 0;
    padding-bottom: 6rem;
  }

  .welcome {
    width: 55%;
    padding: 2rem 0 0rem 0;
    display: block;
  }
}

.content-box > img {
  width: 100%;
}

.homepage-banner {
  margin: 0 auto 5rem;
  text-align: center;
  font-size: 240%;
  line-height: 1.4;
  font-weight: 700;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  color: var(--colorSecondaryDark);
}

@media (min-width: 1025px) {
  .homepage-banner {font-size: 300%;}
}

.squiggly {
  position: relative;
}

.squiggly > img {
  position: absolute;
  top: 0.7em;
  left: 0;
  z-index: -1;
}

/* FAQ accordion component styling */
.rc-collapse {
  @apply --content-squash;
}

.rc-collapse-anim-active {
  transition: height 0.2s ease-out;
}

.rc-collapse-content-inactive {
  display: none;
}

.rc-collapse-content {
  margin-top: 0;
}

.rc-collapse-header {
  cursor: pointer;

  & .arrow {
    display: inline-block;
    content: '\20';
    width: 0;
    height: 0;
    font-size: 0;
    line-height: 0;
    border-top: 3px solid transparent;
    border-bottom: 3px solid transparent;
    border-left: 4px solid var(--colorPrimary);
    vertical-align: middle;
    margin-right: 8px;

    @nest .rc-collapse-item-active & {
      border-left: 3px solid transparent;
      border-right: 3px solid transparent;
      border-top: 4px solid var(--colorPrimary);
      margin-right: 6px;
    }
  }
}

.fluid-embed {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;

  & iframe,
  & object,
  & embed {
    width: 100%;
    height: 100%;
    @apply --absolute-full;
  }
}

.no-bullet-list {
  list-style: none;
}

/* font face https://medium.com/@dowsoncreative/a-little-bit-of-web-font-best-practice-5db63ef14d41#.nfals04ia */

/*
Body face - Karla
*/

/* Webfont: Karla-Regular */
@font-face {
  font-family: 'Karla';
  src: url('/assets/fonts/Karla-Regular.woff2') format('woff2'),
       url('/assets/fonts/Karla-Regular.woff') format('woff');
  font-style: normal;
  font-weight: 400;
}

/* Webfont: Karla-Bold */
@font-face {
  font-family: 'Karla';
  src: url('/assets/fonts/Karla-Bold.woff2') format('woff2'),
       url('/assets/fonts/Karla-Bold.woff') format('woff');
  font-style: normal;
  font-weight: 700;
}

/*
Display face - Montserrat
*/

/* Webfont: Montserrat-Regular */
@font-face {
  font-family: 'Montserrat';
  src: url('/assets/fonts/Montserrat-Regular.woff2') format('woff2'),
       url('/assets/fonts/Montserrat-Regular.woff') format('woff');
  font-style: normal;
  font-weight: 400;
}

/* Webfont: Montserrat-Bold */
@font-face {
  font-family: 'Montserrat';
  src: url('/assets/fonts/Montserrat-Bold.woff2') format('woff2'),
       url('/assets/fonts/Montserrat-Bold.woff') format('woff');
  font-style: normal;
  font-weight: 700;
}

hr {
  width: 100%;
  border: 0;
  height: 1px;
  background: var(--colorNeutral);
  opacity: 0.2;
  margin: 2rem 0;
}

#map {
  width: 100%;
  height: 50vh;
}

.big-links a {
  font-size: 125%;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: 700;
  color: var(--colorSecondaryDark);
  margin: 0;
  padding: 0;
  vertical-align: middle;
}
.big-links a img {
  margin: 0 0.5em 0 0;
  vertical-align: middle;
}

.big-links a:hover {
  opacity: 1;
  color: var(--colorHover);
}

.top-buffer {
  margin-top: 8vh;
}

.bottom-buffer {
  margin-bottom: 8vh;
}

.shim {
  margin-bottom: 3em;
}

